--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Discord-Trump",
   "version": "1.0.0",
-  "description": "Text to speech Discord bot using the Jungle Horse API.",
+  "description": "Text to speech Discord bot using Vocodes and 15.ai.",
   "main": "trump.js",
   "engines": {
     "node": "10.x",
@@ -34,8 +34,8 @@
   "author": "MysteryPancake",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "github:discordjs/discord.js",
-    "node-opus": "^0.3.2",
-    "request": "^2.88.0"
+    "discord.js": "^12.4.1",
+    "node-opus": "^0.3.3",
+    "request": "^2.88.2"
   }
 }
